user-registration/static/css/style.css
/*custom font*/
@import url(http://fonts.googleapis.com/css?family=Montserrat);

/*basic reset*/
* {
    margin: 0;
    padding: 0;
}

html {
	/*height: 100%;*/
        min-height: 1500px;
}

body {
	font-family: montserrat, arial, verdana;
	background:
		linear-gradient(rgba(196, 102, 0, 0.2), rgba(155, 89, 182, 0.2)), 
		url('/static/img/gs.png');
	/*background: linear-gradient(rgba(94, 94, 240, 1), rgba(255, 255, 255, 1));*/
        color: #fff;
}

h4 { color: #aaa; }
a { color: #0d0; }
a:visited { color: #0d0; }

hr {
  margin-top: 1rem;
  margin-bottom: 1rem;
  border: 1;
  border-top: 10px solid rgba(255, 255, 255, 0.2);
}

.giant {
  font: bold 60px Georgia;
}

/*progressbar*/
#progressbar {
	width: 700px;
	margin: 50px auto;
	text-align: center;
	position: relative;
	margin-bottom: 30px;
	overflow: hidden;
	/*CSS counters to number the steps*/
	counter-reset: step;
}
#progressbar li {
	list-style-type: none;
	color: white;
	text-transform: uppercase;
	font-size: 9px;
	width: 20%;
	float: left;
	position: relative;
}
#progressbar li:before {
	content: counter(step);
	counter-increment: step;
	width: 20px;
	line-height: 20px;
	display: block;
	font-size: 10px;
	color: #333;
	background: white;
	border-radius: 3px;
	margin: 0 auto 5px auto;
}
/*progressbar connectors*/
#progressbar li:after {
	content: '';
	width: 100%;
	height: 2px;
	background: white;
	position: absolute;
	left: -50%;
	top: 9px;
	z-index: -1; /*put it behind the numbers*/
}
#progressbar li:first-child:after {
	/*connector not needed before the first step*/
	content: none; 
}
/*marking active/completed steps green*/
/*The number of the step and the connector before it = green*/
#progressbar li.active:before,  #progressbar li.active:after{
	background: #27AE60;
	color: white;
}

.faq {
  counter-reset: my-counter;
}
.faq dt {
  position: relative;
  font: bold 16px Georgia;
  padding: 4px 0 5px 0;
}
.faq dt:before {
  content: counter(my-counter);
  counter-increment: my-counter;
  position: absolute;
  left: 0;
  top: 0;
  font: bold 50px/1 Sans-Serif;
}
.faq dd {
  margin: 0 0 50px 0;
  color: #aaa;
}	
.faq dt, .faq dd {
  padding-left: 50px;
}

.top-buffer { margin-top:20px; }
.bottom-buffer { margin-bottom:20px; }

